@@ -1,13 +1,13 @@
 Package: pQTLtools
 Version: 0.1
-Date: 2020-12-19
+Date: 2020-12-21
 Title: pQTL Tools
 Author: Jing Hua Zhao
 Maintainer: Jing hua Zhao <jinghuazhao@hotmail.com>
 Depends: R (>= 3.5.0)
-Imports: TwoSampleMR
-Suggests: gap, circlize, knitr, karyoploteR, openxlsx, phenoscanner,
-          regioneR, reticulate, biomaRt, GenomicRanges, IRanges
+Imports: dplyr, TwoSampleMR
+Suggests: biomaRt, gap, circlize, knitr, karyoploteR, openxlsx, phenoscanner,
+          purrr, regioneR, reticulate, seqminer, GenomicRanges, IRanges
 LazyData: Yes
 LazyLoad: Yes
 Description: This repository collects information on a number of protein panels, 
