@@ -1,5 +1,5 @@
-export(genequeries,regionqueries,snpqueries,pqtlMR,uniprot2ids)
-import(utils)
+export(genequeries,regionqueries,snpqueries,import_eQTLCatalogue,pqtlMR,uniprot2ids)
+import(dplyr,utils)
 importFrom("graphics", "abline", "arrows", "axis", "box", "identify",
            "legend", "lines", "mtext", "par", "plot", "points",
            "segments", "text")
