@@ -1,5 +1,6 @@
 ## Version 0.1
 
+* Adopt import_eQTLCatalogue from eQTL-Catalogue-resources suggesting seqminer
 * Listed publications on pQTLs by Sun et al. (2018) and Suhre et al. (2020)
 * uniprot2ids based on UniProt
 * pqtlMR based on TwoSampleMR
